--- a/style.css
+++ b/style.css
@@ -10,7 +10,15 @@ body{
 }
 .principal{
     background-image: url(img/Background.png);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 .container{
     height: 100vh;
+}
+.container__botao{
+    background-color: var(--botao-zul);
+    border-radius: 5px;
+    padding: lem;
+    color: var(--branca-principal);
 }
