--- a/style.css
+++ b/style.css
@@ -15,10 +15,13 @@ body{
 }
 .container{
     height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%; 
 }
 .container__botao{
     background-color: var(--botao-zul);
     border-radius: 5px;
     padding: lem;
     color: var(--branca-principal);
+    display: block;
 }
