--- a/style.css
+++ b/style.css
@@ -25,3 +25,7 @@ body{
     color: var(--branca-principal);
     display: block;
 }
+.botao__secundario{
+    background-color: transparent;
+    border: 2px solid var(--branca-principal);
+}
